bk_ida/gccida/c1/copy_addr_to_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_addr_to_reg/src/explow.c:1155:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), x); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_addr_to_reg/src/obj/explow.o] Error 1
